tests/baselines/reference/asyncMethod5.errors.txt
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts(7,3): error TS1057: An async function or method must have a valid awaitable return type.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts(7,13): error TS1138: Parameter declaration expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts(7,13): error TS2304: Cannot find name 'await'.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts(7,18): error TS1005: ';' expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts(7,19): error TS1128: Declaration or statement expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts(7,33): error TS1109: Expression expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts(9,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod5.ts (7 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {
      async foo(await): Promise<void> {
      ~~~~~~~~~~
!!! error TS1057: An async function or method must have a valid awaitable return type.
                ~~~~~
!!! error TS1138: Parameter declaration expected.
                ~~~~~
!!! error TS2304: Cannot find name 'await'.
                     ~
!!! error TS1005: ';' expected.
                      ~
!!! error TS1128: Declaration or statement expected.
                                    ~
!!! error TS1109: Expression expected.
      }
    }
    ~
!!! error TS1128: Declaration or statement expected.